--- a/index.html
+++ b/index.html
@@ -308,9 +308,21 @@
           ]
         },
         {
+          id: 'decade',
+          question: '何年代の作品？',
+          subtitle: 'SCREEN 5',
+          options: [
+            { value: '1990s', label: '90年代以前', desc: '~1999', code: '90s' },
+            { value: '2000s', label: '00年代', desc: '2000-2009', code: '00s' },
+            { value: '2010s', label: '10年代', desc: '2010-2019', code: '10s' },
+            { value: '2020s', label: '20年代', desc: '2020~', code: '20s' },
+            { value: 'any', label: 'どれでも', desc: 'Any', code: 'ALL' }
+          ]
+        },
+        {
           id: 'language',
           question: '言語は？',
-          subtitle: 'SCREEN 5',
+          subtitle: 'SCREEN 6',
           options: [
             { value: 'ja', label: '日本語', desc: 'Japanese', code: 'JPN' },
             { value: 'en', label: '英語', desc: 'English', code: 'ENG' },
@@ -324,7 +336,7 @@
         {
           id: 'runtime',
           question: '視聴時間は？',
-          subtitle: 'SCREEN 6',
+          subtitle: 'SCREEN 7',
           options: [
             { value: 'short', label: '短め (90分以下)', desc: 'Short', code: 'SHT' },
             { value: 'medium', label: '普通 (90-120分)', desc: 'Medium', code: 'MED' },
@@ -335,7 +347,7 @@
         {
           id: 'setting',
           question: '舞台・世界観は？',
-          subtitle: 'SCREEN 7',
+          subtitle: 'SCREEN 8',
           options: [
             { value: 'modern', label: '現代', desc: 'Modern', code: 'MOD' },
             { value: 'past', label: '過去', desc: 'Past', code: 'PST' },
@@ -347,7 +359,7 @@
         {
           id: 'with',
           question: '誰と見る？',
-          subtitle: 'SCREEN 8',
+          subtitle: 'SCREEN 9',
           options: [
             { value: 'alone', label: '一人', desc: 'Alone', code: 'ALN' },
             { value: 'friends', label: '友達', desc: 'Friends', code: 'FRD' },
