--- a/index.html
+++ b/index.html
@@ -333,17 +333,17 @@
             { value: 'any', label: '気にしない', desc: 'Any', code: 'ALL' }
           ]
         },
-        {
+      {
           id: 'mood',
           question: '今の気分は？',
           subtitle: 'SCREEN 7',
           options: [
             { value: 'exciting', label: 'ワクワク', desc: 'Exciting', code: 'EXC' },
             { value: 'calm', label: 'しっとり', desc: 'Calm', code: 'CAL' },
-            { value: 'thrilling', label: 'ドキドキ', desc: 'Thrilling', code: 'THR' },
+            { value: 'thrilling', label: 'ハラハラ', desc: 'Thrilling', code: 'HAR' },
             { value: 'funny', label: '笑いたい', desc: 'Funny', code: 'FUN' },
             { value: 'crying', label: '泣きたい', desc: 'Crying', code: 'CRY' },
-            { value: 'inspiring', label: '感動したい', desc: 'Inspiring', code: 'INS' },
+            { value: 'inspiring', label: 'エモい', desc: 'Emotional', code: 'EMO' },
             { value: 'thinking', label: '考えたい', desc: 'Thinking', code: 'THK' },
             { value: 'relaxing', label: 'リラックス', desc: 'Relaxing', code: 'REL' },
             { value: 'scared', label: '怖いの見たい', desc: 'Scared', code: 'SCR' },
@@ -351,18 +351,6 @@
             { value: 'nostalgic', label: '懐かしい', desc: 'Nostalgic', code: 'NOS' },
             { value: 'energetic', label: '元気になりたい', desc: 'Energetic', code: 'ENR' },
             { value: 'any', label: 'どんな気分でも', desc: 'Any', code: 'ALL' }
-          ]
-        },
-        {
-          id: 'setting',
-          question: '舞台・世界観は？',
-          subtitle: 'SCREEN 8',
-          options: [
-            { value: 'modern', label: '現代', desc: 'Modern', code: 'MOD' },
-            { value: 'past', label: '過去', desc: 'Past', code: 'PST' },
-            { value: 'future', label: '未来', desc: 'Future', code: 'FUT' },
-            { value: 'fantasy', label: 'ファンタジー', desc: 'Fantasy', code: 'FAN' },
-            { value: 'any', label: 'どれでも', desc: 'Any', code: 'ALL' }
           ]
         },
         {
